created schema, installed db

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -10,7 +10,11 @@
 
 <body>
     <div class="container">
-        <form action="/auth/login" method="POST">
+        <h1>Log In</h1>
+        {{#errors}}
+            {{.}}
+        {{/errors}}
+        <form action="/login" method="POST">
             <input type="text" name="username">
             <input type="password" name="password">
             <button type="submit">Log In</button>
