--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -10,13 +10,13 @@
 
 <body>
     <div class="signupContainer">
-        <form action="/signup/auth" method="POST">
-            <input type="text" name="username">
-            <input type="text" name="name">
-            <input type="email" name="email">
-            <input type="password" name="password">
-            <input type="text" name="education">
-            <input type="text" name="skills">
+        <h1>Sign Up</h1>
+        <form action="/signup" method="POST">
+            <input type="text" name="username" placeholder="username">
+            <input type="text" name="name" placeholder="name">
+            <input type="email" name="email" placeholder="email">
+            <input type="password" name="password" placeholder="password">
+            <input type="text" name="university" placeholder="university">
             <button type="Submit">Submit</button>
         </form>
     </div>
