--- a/views/home.mustache
+++ b/views/home.mustache
@@ -13,11 +13,15 @@
 
   <div class="wrapper">
     <h1>index</h1>
+    <nav>
+      <a href="/signup">Signup</a>
+      <a href="/login">Login</a>
+    </nav>
     <div class="container">
       {{#users}}
       <div class="box">
         <div>{{name}}</div>
-        <img src="{{avatar}}" alt="#">
+        <img src={{avatar}} alt="#">
         <div>{{job}}</div>
         <div class="hire">{{^job}}for hire{{/job}}</div>
         <form action="/profile/{{id}}" method="GET">
