added links for employed/un

--- a/views/home.mustache
+++ b/views/home.mustache
@@ -16,6 +16,8 @@
     <nav>
       <a href="/signup">Signup</a>
       <a href="/login">Login</a>
+      <a href="/employed">Employed Bots</a>
+      <a href="/unemployed">Unemployed Bots</a>
     </nav>
     <div class="container">
       {{#users}}
