--- a/views/home.mustache
+++ b/views/home.mustache
@@ -26,7 +26,7 @@
         <img src={{avatar}} alt="#">
         <div>{{job}}</div>
         <div class="hire">{{^job}}for hire{{/job}}</div>
-        <form action="/profile/{{id}}" method="GET">
+        <form action="/profile/{{_id}}" method="GET">
           <button type="submit">See Profile</button>
         </form>
       </div>
