--- a/views/login.mustache
+++ b/views/login.mustache
@@ -5,20 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="inputContainer">
         <h1>Log In</h1>
         {{#errors}}
             {{.}}
         {{/errors}}
+    <div class="formContainer"
         <form action="/login" method="POST">
             <input type="text" name="username">
             <input type="password" name="password">
             <button type="submit">Log In</button>
         </form>
+    </div>
     </div>
 </body>
 
