--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="signupContainer">
+    <div class="inputContainer">
+    <div class="formContainer">
         <h1>Sign Up</h1>
         <form action="/signup" method="POST">
             <input type="text" name="username" placeholder="username">
@@ -18,6 +20,7 @@
             <input type="password" name="password" placeholder="password">
             <button type="Submit">Submit</button>
         </form>
+        </div>
     </div>
 </body>
 
