--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,12 +35,28 @@ body {
 }
 
 .formContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     background-color: white;
     border: 1px solid darkgray;
     height: 15rem;
     width: 32rem;
-    display: flex;
     margin-top: 4.2rem;
+}
+
+.formColumn {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    outline: none;
+    border: 2px solid darkgray;
+    margin-top: .9rem;
+    width: 11rem;
+    height: 1.8rem;
+    font-size: 21px;
 }
 
 
@@ -71,7 +87,7 @@ body {
 }
 
 h1 {
-    padding-left: 1rem;
+    font-size: 21px;
 }
 
 h2 {
