--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -14,11 +14,13 @@
     <div class="formContainer">
         <h1>Sign Up</h1>
         <form action="/signup" method="POST">
+            <div class="formColumn"
             <input type="text" name="username" placeholder="username">
             <input type="text" name="name" placeholder="name">
             <input type="email" name="email" placeholder="email">
             <input type="password" name="password" placeholder="password">
             <button type="Submit">Submit</button>
+            </div>
         </form>
         </div>
     </div>
