--- a/views/login.mustache
+++ b/views/login.mustache
@@ -16,6 +16,7 @@
         {{/errors}}
     <div class="formContainer">
         <h1>Log In</h1>
+        <a href="/">Home</a>
         <form action="/login" method="POST">
         <div class="formColumn">
             <input type="text" name="username">
