--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -36,6 +36,7 @@
                 <input type="text" name="job" value="{{job}}">
                 <button type="submit">Update</button>
             </form>
+            <a href="/">Home</a>
             </div>
             {{/users}}
         </div>
