--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -13,8 +13,9 @@
     <div class="inputContainer">
     <div class="formContainer">
         <h1>Sign Up</h1>
+        <a href="/">Home</a>
         <form action="/signup" method="POST">
-            <div class="formColumn"
+            <div class="formColumn">
             <input type="text" name="username" placeholder="username">
             <input type="text" name="name" placeholder="name">
             <input type="email" name="email" placeholder="email">
