--- a/views/home.mustache
+++ b/views/home.mustache
@@ -12,13 +12,16 @@
 <body>
 
   <div class="wrapper">
+    <header>
     <h1>index</h1>
     <nav>
       <a href="/signup">Signup</a>
       <a href="/login">Login</a>
       <a href="/employed">Employed Bots</a>
       <a href="/unemployed">Unemployed Bots</a>
+      <a href="/">All Bots</a>
     </nav>
+    </header>
     <div class="container">
       {{#users}}
       <div class="box">
